# Alfred

./: .gitignore  README.md  alfred_config.json  package.json  pnpm-lock.yaml  prompts.toml  pyproject.toml  repomix-output.xml
backend/alfred/: config.py  db.py  main.py
backend/alfred/agents/: base.py  hypothesis.py  runner.py  setup.py
backend/alfred/api/: __init__.py  config_router.py  dashboard_router.py  experiments_router.py  hypothesis_router.py  memory_router.py  messages_router.py  models_router.py  projects_router.py  runner_router.py  tools_router.py
backend/alfred/memory/: __init__.py  compress.py  context.py  store.py
backend/alfred/models/: __init__.py  db_models.py  models.py
backend/alfred/services/: conda.py  dataset_cache.py  git_service.py  gpu.py  ollama.py  plotting.py  vram_catalog.py
backend/alfred/state_machine/: machine.py
backend/alfred/tools/: arxiv_search.py  base.py  dispatch.py  openalex_search.py  semantic_scholar.py  tools.yaml  web_search.py
backend/alfred/utils/: paths.py
backend/alfred/ws/: __init__.py  manager.py
backend/tests/: conftest.py  test_smoke.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7.py  test_stage8.py
docs/: architecture.md  plugin-api.md  stage5-6-deployment-guide.md
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  memoryClient.ts  useWebSocket.ts
frontend/src/pages/: SetupPage.tsx
scripts/: dev.py  package.py
(+21 files in other folders)
