[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alfred"
version = "0.1.0"
description = "Local-first AI research agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.18",
    "pydantic>=2.7.0",
    "ollama>=0.2.1",
    "pynvml>=11.5.0",
    "psutil>=5.9.0",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "semanticscholar>=0.8.4",
    "duckduckgo-search>=6.1.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]